# iot-dev-pro-3-g-08b-work

./: .gitignore  README.md  dht22_takemoto.py  pyproject.toml  requirements.txt  sensor_client.py  sensor_readings.csv  sensor_receiver.py  web_dashborad.py
.github/workflows/: ci.yml
client/: .env.example
client/src/: .env.example  csv_writter.py  dht22_takemoto.py  env_loader.py  logger_setup.py  sensor_client.py
client/tests/: test_client_edge_cases.py  test_client_side.py  test_dht22_driver.py  test_env_loader.py
client/tests/unit/: test_client_edge_cases.py  test_client_side.py  test_dht22_driver.py  test_env_loader.py
docs/: 技術資料.md
mobile-web/: index.html
scripts/: ci_test_summary.py
server/: .env.example
server/src/: .env.example  csv_loader.py  csv_lock.py  csv_storage.py  csv_writter.py  env_loader.py  logger_setup.py  sensor_receiver.py  web_dashboard.py
server/src/templates/: dashboard.html
server/tests/: test_csv_write_failures.py  test_integration_and_edges.py  test_server_side.py  test_support_modules.py
server/tests/integration/: test_csv_process_lock.py  test_integration_and_edges.py
server/tests/unit/: test_csv_write_failures.py  test_server_side.py  test_support_modules.py
systemd/: iot-sensor_client.service  iot-sensor_client.service.example  iot-sensor_dashboard.service  iot-sensor_dashboard.service.example  iot-sensor_receiver.service  iot-sensor_receiver.service.example
templates/: dashboard.html
