[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-dev-pro-g08b"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.1.3",
    "python-dotenv>=1.2.2",
]

[project.scripts]
sensor-client = "client.src.sensor_client:main"
sensor-receiver = "server.src.sensor_receiver:main"
sensor-dashboard = "server.src.web_dashboard:main"

[tool.setuptools.packages.find]
include = [
    "client*",
    "server*",
]

[tool.setuptools.package-data]
"client.src" = [".env.example"]
"server.src" = [".env.example", "templates/*.html"]
