[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-dev-pro-g08b"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.1.3",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = [
    "client/tests",
    "server/tests",
]
markers = [
    "integration: TCP、Flask、CSV書き込みをまたぐ統合テスト",
]

[tool.coverage.run]
branch = true
source = [
    "client/src",
    "server/src",
]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
exclude_also = [
    "if __name__ == [\"']__main__[\"']:",
]

[project.scripts]
sensor-client = "client.src.sensor_client:main"
sensor-receiver = "server.src.sensor_receiver:main"
sensor-dashboard = "server.src.web_dashboard:main"

[tool.setuptools.packages.find]
include = [
    "client*",
    "server*",
]

[tool.setuptools.package-data]
"client.src" = [".env.example"]
"server.src" = [".env.example", "templates/*.html"]
